k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fabritor-web
  labels:
    app: fabritor-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: fabritor-web
